修改相关功能

--- a/说明.md
+++ b/说明.md
@@ -5,3 +5,47 @@ java -jar ./lvyou-1.0.0-fat.jar > app.log 2>&1
 增加商家表(shop),商品增加goodid(skus->count[每人在一个活动中最多可领取数量]),线路增加isshow,goodidstr,物品领用表增加roadid
 
 领用核销:商家登录,取得操作人id,商家名称,扫码得到客户id,旅行id(如果商品可领多次及可领物品超过一种,列出商品及可领次数,选择一种核销,如果只有一种商品且只可领一次,则直接核销,不用选择)
+
+修改说明:
+1.bbs表增加 hits,zans,zanlist,hot,rank
+2.增加 bbs_hits 表记录浏览用户
+3.postion表增加 option_pic(景点打卡选项图片),option_content(景点打卡选项说明),
+4.road 表增加 活动最大天数maxdays
+5.road_position表增加 cur_x 点亮横坐标,ur_y 点亮纵坐标  删除线路简图pic
+6.travel表增加result(是否挑战成功:0:失败,1:成功, 起点,中间点至少打卡一次,终点打卡才算成功)
+7.报名可以同时报多条线路,但一条线路只能结束后才可报名,进行中的线路只能有一条(审核后第一次打卡后激活进行中状态)
+8.测试打卡(使用打卡点最后一位数少1用来测试[也就是正常取当前用户坐标,但转入的数据为打卡点最后一位数少1的测试数,打卡测试完成后重新转回正常数])
+9.java 如何在一张背景图上不同的坐标点叠加多个小的透明小图(如果点多产生的图片会很多,不作保存,直接返回图片base64)
+r_1_0.png(第一个没点亮),r_1_1.png(第一个点亮)
+r_1_0_2_0.png(第一个没点亮第二个没点亮),r_1_0_2_1.png(第一个没点亮第二个点亮),r_1_1_2_0.png(第一个点亮第二个没点亮),r_1_1_2_1.png(第一个点亮第二个点亮)
+try {
+// 创建背景图
+BufferedImage backgroundImage = new BufferedImage(800, 600, BufferedImage.TYPE_INT_ARGB);
+Graphics2D g2d = backgroundImage.createGraphics();
+
+            // 设置背景颜色
+            g2d.setColor(Color.WHITE);
+            g2d.fillRect(0, 0, backgroundImage.getWidth(), backgroundImage.getHeight());
+
+            // 加载小图
+            BufferedImage overlayImage1 = ImageIO.read(new File("path/to/overlay1.png"));
+            BufferedImage overlayImage2 = ImageIO.read(new File("path/to/overlay2.png"));
+
+            // 设置透明度
+            g2d.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, 0.5f));
+
+            // 在背景图上绘制小图
+            g2d.drawImage(overlayImage1, 100, 100, null); // 在坐标 (100, 100) 绘制
+            g2d.drawImage(overlayImage2, 300, 200, null); // 在坐标 (300, 200) 绘制
+
+            // 释放资源
+            g2d.dispose();
+
+            // 将图像转换为Base64编码
+            String base64Image = encodeToBase64(backgroundImage, "PNG");
+
+            // 输出Base64编码
+            System.out.println(base64Image);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
